--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
 <div class="row">
     <div class="col span-12 header">
         <h1><a href="">Ryosuke Akashi</a></h1>
-		<div class="header-box"><a href=""><span class="contact-button">お問い合わせ</span></a></div>
-        </div>
     </div>
+</div>
 <div class="row">
     <div class="col span-12">
         <nav>
@@ -63,7 +62,7 @@
         <br>
         <br>
         <div class="container left">
-        Chief Researcher, <p>Quantum Materials Theory Project,
+        Principal Researcher, <p>Quantum Materials Theory Project,
         National Institutes for Quantum Science and Technology, Japan
         </div>
         
