--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     -->
     <main>
       <div class="container left">
-        Last Updated: 2023/02/05
+        Last Updated: 2023/04/11
         </div>
         <br>
         <br>
@@ -1007,12 +1007,16 @@
   </div>
 <div class="container left">
 <div style="width: 100%; height: 200px; overflow-y: scroll; border: 1px #999999 solid;">
+  2023/04--present  <br>
+<p style="text-indent: 1rem;">  Principal Researcher, Quantum Materals Theory Project, National Institutes for Quantum Science and Technology, Japan  
+</p>
+<br>
   2022/12--present  <br>
   <p style="text-indent: 1rem;">  Technical Advisor, Quemix inc.
   </p>
   <br>
-  2022/05--present  <br>
-<p style="text-indent: 1rem;">  Chief Researcher, Quantum Materals Theory Project, National Institutes for Quantum Science and Technology, Japan  
+  2022/05--2023/03  <br>
+<p style="text-indent: 1rem;">  Senior Researcher, Quantum Materals Theory Project, National Institutes for Quantum Science and Technology, Japan  
 </p>
 <br>
 2014/09--2022/04<br>
