Journal pages for Tanaka et al., PRL

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
   <div style="width: 100%; height: 1000px; overflow-y: scroll; border: 1px #999999 solid;">
     47, H. Tanaka, A. V. Telegin, Y. P. Sukhorukov, V. A. Golyashov, O. E. Tereshchenko, A. N. Lavrov, T. Matsuda, R. Matsunaga, <strong>R. Akashi</strong>, M. Lippmaa, Y. Arai, S. Ideta, K. Tanaka, T. Kondo, and K. Kuroda<br>
     "Semiconducting electronic structure of the ferromagnetic spinel HgCr2Se4 revealed by soft-x-ray angle-resolved photoemission spectroscopy" <br>
-    <a href="https://journals.aps.org/prb/abstract/10.1103/PhysRevB.107.094305">
-      Phys. Rev. Lett. <strong>accepted</strong>(2023)</a> 
+    <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.130.186402">
+      Phys. Rev. Lett. <strong>130</strong>, 186402 (2023)</a> 
     <details>
       <summary>Comment</summary>
       田中宏明さん(物性研)による仕事．スピネル型化合物HgCr2Se4の電子状態を高精度角度分解光電子分光で計測したもの．該当物質は強磁性Weil半金属でないかと言われていた物質であったが，今回の高精度計測により普通にギャップが開いているらしいと分かった．自分はバンド計算でギャップの有無の裏取りをした．いわゆるハイブリッド汎関数計算をがっつりやったのは初めてだったのだけど．mixingを振るとか伝導帯のWannier内挿とかちょっと非自明な操作を色々やってみる必要があり勉強になった．(2023/03/23 記)
