--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     -->
     <main>
       <div class="container left">
-        Last Updated: 2023/04/11
+        Last Updated: 2023/06/08
         </div>
         <br>
         <br>
@@ -69,9 +69,18 @@
 <section id="1" class="gray-back">
   <div class="container left">
         <h2 >Research publications</h2><br>
-      </div>
- 
+  </div>
   <div class="container left">
+    <h2>Preprints</h2>
+    <div style="width: 100%; height: 200px; overflow-y: scroll; border: 1px #999999 solid;">
+      1, <strong>R. Akashi</strong>,
+      <a href="https://arxiv.org/abs/2306.04238">
+        arXiv:2306.04238</a> 
+    </div>
+  </div>
+  <div class="container left">
+  <h2>Refereed papers</h2>
+
   <div style="width: 100%; height: 1000px; overflow-y: scroll; border: 1px #999999 solid;">
     47, H. Tanaka, A. V. Telegin, Y. P. Sukhorukov, V. A. Golyashov, O. E. Tereshchenko, A. N. Lavrov, T. Matsuda, R. Matsunaga, <strong>R. Akashi</strong>, M. Lippmaa, Y. Arai, S. Ideta, K. Tanaka, T. Kondo, and K. Kuroda<br>
     "Semiconducting electronic structure of the ferromagnetic spinel HgCr2Se4 revealed by soft-x-ray angle-resolved photoemission spectroscopy" <br>
