--- a/index.html
+++ b/index.html
@@ -76,8 +76,17 @@
       1, <strong>R. Akashi</strong>,
       <a href="https://arxiv.org/abs/2306.04238">
         arXiv:2306.04238</a> 
+        <br>
+      2, R. Nagai and <strong>R. Akashi</strong>,
+      <a href="https://arxiv.org/abs/2206.15370">
+        arXiv:2206.15370</a>
+        <br> 
+      3, S. Sakuragi, S. Sasaki, <strong>R. Akashi</strong>, R. Sakagami, K. Kuroda, C. Bareille, T. Hashimoto, T. Nagashima, Y. Kinoshita, Y. Hirata, M. Shimozawa, S. Asai, T. Yajima, S. Doi, N. Tsujimoto, S. Kunisada, R. Noguchi, K. Kurokawa, N. Azuma, K. Hirata, Y. Yamasaki, H. Nakao, T. K. Kim, C. Cacho, T. Masuda, M. Tokunaga, H. Wadati, K. Okazaki, S. Shin, Y. Kamihara, M. Yamashita, and T. Kondo,
+      <a href="https://arxiv.org/abs/2001.07991">
+        arXiv:2001.07991</a> 
     </div>
   </div>
+  <br>
   <div class="container left">
   <h2>Refereed papers</h2>
 
@@ -408,7 +417,20 @@
     <br>
     
   </div>
+
 </div>
+<br>
+<div class="container left">
+    <h2>Review articles</h2>
+    <div style="width: 100%; height: 200px; overflow-y: scroll; border: 1px #999999 solid;">
+      1, Heather Kulik, Thomas Hammerschmidt, Jonathan Schmidt, Silvana Botti, Miguel AL Marques, Mario Boley, Matthias Scheffler, Milica Todorović, Patrick Rinke, Corey Oses, Andriy Smolyanyuk, Stefano Curtarolo, Alexandre Tkatchenko, Albert Bartok, Sergei Manzhos, Manabu Ihara, Tucker Carrington, Jörg Behler, Olexandr Isayev, Max Veit, Andrea Grisafi, Jigyasa Nigam, Michele Ceriotti, Kristoff T Schütt, Julia Westermayr, Michael Gastegger, Reinhard Maurer, Bhupalee Kalita, Kieron Burke, Ryo Nagai, <strong>Ryosuke Akashi</strong>, Osamu Sugino, Jan Hermann, Frank Noé, Sebastiano Pilati, Claudia Draxl, Martin Kuban, Santiago Rigamonti, Markus Scheidgen, Marco Esters, David Hicks, Cormac Toher, Prasanna Balachandran, Isaac Tamblyn, Stephen Whitelam, Colin Bellinger, Luca M Ghiringhelli
+      "Roadmap on Machine learning in electronic structure"
+      <a href="https://iopscience.iop.org/article/10.1088/2516-1075/ac572f">
+        Electron. Struct. 4, 023004 (2022)</a>
+      <br>
+
+    </div>
+  </div>
 
 
 </section>
