--- a/index.html
+++ b/index.html
@@ -444,6 +444,17 @@
   </div>
   <div class="container left">
     <div style="width: 100%; height: 200px; overflow-y: scroll; border: 1px #999999 solid;">
+      53, <strong>R. Akashi</strong><br>
+      "Phonon mediated superconductors from first principles" <br>
+      Hierarchical structures and machine learning 2023 (HISML2023) <br>
+      Oct. 2--13, 2023; Institute for Solid State Physics, Kashiwa, Japan<br>
+      口頭発表(招待)<br>
+      52, <strong>R. Akashi</strong><br>
+      "Eliashberg theory in the uniform electron gas revisited" <br>
+      Superstripes 2023 <br>
+      Jun. 25--Jul. 1, 2023; Hotel Continental Ischia, Ischia, Italy<br>
+      口頭発表(招待)<br>
+      <br>
       51, <strong>R. Akashi</strong><br>
       "Eliashberg theory in the uniform electron gas revisited" <br>
       APS March meeting 2023 <br>
@@ -829,6 +840,10 @@
 
   <div class="container left">
     <div style="width: 100%; height: 200px; overflow-y: scroll; border: 1px #999999 solid;">
+      45, <strong>明石遼介</strong><br>
+      "ほとんど一様な電子系における線状バンド特異点について" <br>
+      日本物理学会 第78回年次大会　東北大学川内キャンパス　2023年9月16日--19日 口頭発表(査読なし)　 <br>
+      <br>
       44, <strong>明石遼介</strong><br>
       "超伝導体における転移温度の第一原理計算" <br>
       量子物理学・ナノサイエンスセミナー(第348回)　東京工業大学大岡山キャンパス　2022年11月21日 口頭発表(招待)　 <br>
