Update on Int'l. presentation

--- a/index.html
+++ b/index.html
@@ -444,11 +444,18 @@
   </div>
   <div class="container left">
     <div style="width: 100%; height: 200px; overflow-y: scroll; border: 1px #999999 solid;">
+      54, <strong>R. Akashi</strong><br>
+      "Bragg intersection: A possible source of correlations in nearly uniform electron systems" <br>
+      Computational Approaches to Quantum Many-Body Systems  <br>
+      Oct. 19--20, 2023; Sonic City, Saitama, Japan<br>
+      口頭発表(招待)<br>
+      <br>
       53, <strong>R. Akashi</strong><br>
       "Phonon mediated superconductors from first principles" <br>
       Hierarchical structures and machine learning 2023 (HISML2023) <br>
       Oct. 2--13, 2023; Institute for Solid State Physics, Kashiwa, Japan<br>
       口頭発表(招待)<br>
+      <br>
       52, <strong>R. Akashi</strong><br>
       "Eliashberg theory in the uniform electron gas revisited" <br>
       Superstripes 2023 <br>
@@ -1087,6 +1094,9 @@
 </div>
 <div class="container left">
 <div style="width: 100%; height: 200px; overflow-y: scroll; border: 1px #999999 solid;">
+2023/11/30   <br>
+<p style="text-indent: 1rem;">  マテリアルズシミュレーション (特別講義・東京工業大学大学院) 
+</p>
 2022/12/2   <br>
 <p style="text-indent: 1rem;">  マテリアルズシミュレーション (特別講義・東京工業大学大学院) 
 </p>
