Addition to reviews

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <li><a href="#1">Publications</a></li>
             <li><a href="#2">Presentations (International)</a></li>
             <li><a href="#3">Presentations (Domestic)</a></li>
-            <li><a href="#4">Books and Review articles</a></li>
+            <li><a href="#4">Review articles</a></li>
             <li><a href="#5">CV</a></li>
             <li><a href="#6">Classes</a></li>
             <li><a href="#7">Grants</a></li>
@@ -56,9 +56,6 @@
     </div>
     -->
     <main>
-      <div class="container left">
-        Last Updated: 2023/10/16
-        </div>
         <br>
         <br>
         <div class="container left">
@@ -423,6 +420,19 @@
 <div class="container left">
     <h2>Review articles</h2>
     <div style="width: 100%; height: 200px; overflow-y: scroll; border: 1px #999999 solid;">
+      3, Ryo Nagai and Ryosuke Akashi <br>
+      "Development of exchange-correlation functionals assisted by machine learning"
+      <a href="https://link.springer.com/chapter/10.1007/978-3-031-37196-7_4">
+        Machine Learning in Molecular Sciences, 91 (2023)</a>
+      <br>
+      <br>
+      2, Yusuke Nomura and Ryosuke Akashi <br>
+      "Density Functional Theory"
+      <a href="https://www.sciencedirect.com/science/article/abs/pii/B9780323908009001487">
+        Encyclopedia of Condensed Matter Physics (Second Edition)
+1, 867 (2024)</a>
+      <br>
+      <br>
       1, Heather Kulik, Thomas Hammerschmidt, Jonathan Schmidt, Silvana Botti, Miguel AL Marques, Mario Boley, Matthias Scheffler, Milica Todorović, Patrick Rinke, Corey Oses, Andriy Smolyanyuk, Stefano Curtarolo, Alexandre Tkatchenko, Albert Bartok, Sergei Manzhos, Manabu Ihara, Tucker Carrington, Jörg Behler, Olexandr Isayev, Max Veit, Andrea Grisafi, Jigyasa Nigam, Michele Ceriotti, Kristoff T Schütt, Julia Westermayr, Michael Gastegger, Reinhard Maurer, Bhupalee Kalita, Kieron Burke, Ryo Nagai, <strong>Ryosuke Akashi</strong>, Osamu Sugino, Jan Hermann, Frank Noé, Sebastiano Pilati, Claudia Draxl, Martin Kuban, Santiago Rigamonti, Markus Scheidgen, Marco Esters, David Hicks, Cormac Toher, Prasanna Balachandran, Isaac Tamblyn, Stephen Whitelam, Colin Bellinger, Luca M Ghiringhelli
       "Roadmap on Machine learning in electronic structure"
       <a href="https://iopscience.iop.org/article/10.1088/2516-1075/ac572f">
