--- a/index.html
+++ b/index.html
@@ -420,25 +420,42 @@
 <div class="container left">
     <h2>Review articles</h2>
     <div style="width: 100%; height: 200px; overflow-y: scroll; border: 1px #999999 solid;">
-      3, Ryo Nagai and Ryosuke Akashi <br>
+      10, Ryo Nagai and Ryosuke Akashi <br>
       "Development of exchange-correlation functionals assisted by machine learning"
       <a href="https://link.springer.com/chapter/10.1007/978-3-031-37196-7_4">
         Machine Learning in Molecular Sciences, 91 (2023)</a>
       <br>
       <br>
-      2, Yusuke Nomura and Ryosuke Akashi <br>
+      9, Yusuke Nomura and Ryosuke Akashi <br>
       "Density Functional Theory"
       <a href="https://www.sciencedirect.com/science/article/abs/pii/B9780323908009001487">
         Encyclopedia of Condensed Matter Physics (Second Edition)
 1, 867 (2024)</a>
       <br>
       <br>
-      1, Heather Kulik, Thomas Hammerschmidt, Jonathan Schmidt, Silvana Botti, Miguel AL Marques, Mario Boley, Matthias Scheffler, Milica Todorović, Patrick Rinke, Corey Oses, Andriy Smolyanyuk, Stefano Curtarolo, Alexandre Tkatchenko, Albert Bartok, Sergei Manzhos, Manabu Ihara, Tucker Carrington, Jörg Behler, Olexandr Isayev, Max Veit, Andrea Grisafi, Jigyasa Nigam, Michele Ceriotti, Kristoff T Schütt, Julia Westermayr, Michael Gastegger, Reinhard Maurer, Bhupalee Kalita, Kieron Burke, Ryo Nagai, <strong>Ryosuke Akashi</strong>, Osamu Sugino, Jan Hermann, Frank Noé, Sebastiano Pilati, Claudia Draxl, Martin Kuban, Santiago Rigamonti, Markus Scheidgen, Marco Esters, David Hicks, Cormac Toher, Prasanna Balachandran, Isaac Tamblyn, Stephen Whitelam, Colin Bellinger, Luca M Ghiringhelli
+      8, Heather Kulik, Thomas Hammerschmidt, Jonathan Schmidt, Silvana Botti, Miguel AL Marques, Mario Boley, Matthias Scheffler, Milica Todorović, Patrick Rinke, Corey Oses, Andriy Smolyanyuk, Stefano Curtarolo, Alexandre Tkatchenko, Albert Bartok, Sergei Manzhos, Manabu Ihara, Tucker Carrington, Jörg Behler, Olexandr Isayev, Max Veit, Andrea Grisafi, Jigyasa Nigam, Michele Ceriotti, Kristoff T Schütt, Julia Westermayr, Michael Gastegger, Reinhard Maurer, Bhupalee Kalita, Kieron Burke, Ryo Nagai, <strong>Ryosuke Akashi</strong>, Osamu Sugino, Jan Hermann, Frank Noé, Sebastiano Pilati, Claudia Draxl, Martin Kuban, Santiago Rigamonti, Markus Scheidgen, Marco Esters, David Hicks, Cormac Toher, Prasanna Balachandran, Isaac Tamblyn, Stephen Whitelam, Colin Bellinger, Luca M Ghiringhelli
       "Roadmap on Machine learning in electronic structure"
       <a href="https://iopscience.iop.org/article/10.1088/2516-1075/ac572f">
         Electron. Struct. 4, 023004 (2022)</a>
       <br>
-
+      <br>
+      3, R. Arita, T. Koretsune, S. Sakai, R. Akashi, Y. Nomura, and W. Sano,
+      "Nonempirical Calculation of Superconducting Transition Temperatures in Light-Element Superconductors"
+      <a href="http://dx.doi.org/10.1002/adma.201602421">
+        Adv. Mater. 1602421 (2017)</a>
+      <br>
+      <br>
+      2, 明石遼介, 是常隆, 有田亮太郎, 常行真司
+      "高圧下で硫化水素が示す高温超伝導：これまでのまとめ"
+      <a href="http://www.agne.co.jp/kotaibutsuri/kota1051.htm#no609">
+        固体物理 51, 729 (アグネ技術センター; 2016)</a>
+      <br>
+      <br>
+      1, 明石遼介, 有田亮太郎
+      "超伝導密度汎関数理論の展開：フォノン機構からプラズモン支援超伝導機構へ"
+      <a href="http://www.agne.co.jp/kotaibutsuri/kota1049.htm#no580">
+        固体物理 49, 405 (アグネ技術センター; 2014)</a>
+      <br>
     </div>
   </div>
 
