Review articles updated.

--- a/index.html
+++ b/index.html
@@ -439,19 +439,40 @@
         Electron. Struct. 4, 023004 (2022)</a>
       <br>
       <br>
-      3, R. Arita, T. Koretsune, S. Sakai, R. Akashi, Y. Nomura, and W. Sano,
+      7, 永井瞭、 明石遼介<br>
+      "ニューラルネットワーク形式の交換相関ポテンシャル"
+      シミュレーション Vol. 39, No.1 (日本シミュレーション学会; 2020)
+      <br>
+      <br>
+      6, 明石遼介<br>
+      "第一原理計算から見出される高圧下硫化水素における「マグネリ相」生成の可能性: その構造と超伝導転移温度"
+      硫酸と工業 Vol. 72, No.9 (硫酸協会; 2019)
+      <br>
+      <br>
+      5, 永井瞭、明石遼介<br>
+      "ニューラルネットワークによる交換相関ポテンシャルの構成"
+      分子シミュレーション学会誌 "アンサンブル" Vol. 21, No.2 (分子シミュレーション学会; 2019)
+      <br>
+      <br>
+      4, R. Akashi<br>
+      "First-Principles Computational Approaches to Superconducting Transition Temperatures: Phonon-Mediated Mechanism and Beyond"
+      <a href="https://pubs.rsc.org/en/content/ebook/978-1-78262-961-0">
+        Computational Materials Discovery, 198 (Royal Society of Chemistry; 2018)</a>
+      <br>
+      <br>
+      3, R. Arita, T. Koretsune, S. Sakai, R. Akashi, Y. Nomura, and W. Sano<br>
       "Nonempirical Calculation of Superconducting Transition Temperatures in Light-Element Superconductors"
       <a href="http://dx.doi.org/10.1002/adma.201602421">
         Adv. Mater. 1602421 (2017)</a>
       <br>
       <br>
-      2, 明石遼介, 是常隆, 有田亮太郎, 常行真司
+      2, 明石遼介, 是常隆, 有田亮太郎, 常行真司<br>
       "高圧下で硫化水素が示す高温超伝導：これまでのまとめ"
       <a href="http://www.agne.co.jp/kotaibutsuri/kota1051.htm#no609">
         固体物理 51, 729 (アグネ技術センター; 2016)</a>
       <br>
       <br>
-      1, 明石遼介, 有田亮太郎
+      1, 明石遼介, 有田亮太郎<br>
       "超伝導密度汎関数理論の展開：フォノン機構からプラズモン支援超伝導機構へ"
       <a href="http://www.agne.co.jp/kotaibutsuri/kota1049.htm#no580">
         固体物理 49, 405 (アグネ技術センター; 2014)</a>
