--- a/index.html
+++ b/index.html
@@ -488,6 +488,12 @@
   </div>
   <div class="container left">
     <div style="width: 100%; height: 200px; overflow-y: scroll; border: 1px #999999 solid;">
+      55, <strong>R. Akashi</strong><br>
+      "Electronic theory of high-Tc hydride superconductor H3S through first-principles calculations" <br>
+      International Workshop on Massively Parallel Programming for Quantum Chemistry and Physics (MPQCP 2024)  <br>
+      Jan. 9--10, 2024; RIKEN, Saitama, Japan<br>
+      口頭発表(招待)<br>
+      <br>
       54, <strong>R. Akashi</strong><br>
       "Bragg intersection: A possible source of correlations in nearly uniform electron systems" <br>
       Computational Approaches to Quantum Many-Body Systems  <br>
