Add Sygergistic activities

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
             <li><a href="#5">CV</a></li>
             <li><a href="#6">Classes</a></li>
             <li><a href="#7">Grants</a></li>
-            <li><a href="#8">Misc</a></li>
+            <li><a href="#8">Professional services</a></li>
+            <li><a href="#9">Misc</a></li>
          </ul>
              </div>
         </nav>
@@ -1231,13 +1232,31 @@
 
     <section id="8">
       <div class="container left">
+        <h2>Synergistic activities</h2>
+      </div>
+      <div class="container left">
+      <div style="width: 100%; height: 200px; overflow-y: scroll; border: 1px #999999 solid;">
+        2023/12--   <br>
+        <p style="text-indent: 1rem;">  External editor, Communications Physics 
+        </p>
+        <br>
+        2023/10   <br>
+        <p style="text-indent: 1rem;">  Organizing committee member, HISML2023 
+        </p>
+        <br>
+      </div>
+      </div>
+    </section>
+
+    <section id="9">
+      <div class="container left">
         <h2>Misc</h2>
       </div>
       <div class="container left">
       <div style="width: 100%; height: 200px; overflow-y: scroll; border: 1px #999999 solid;">
-      
       </div>
       </div>
+    </section>
       
 
     <p id="pagetop"><a href="#">TOP</a></p>
