Synergistic activities: add

--- a/index.html
+++ b/index.html
@@ -898,6 +898,10 @@
 
   <div class="container left">
     <div style="width: 100%; height: 200px; overflow-y: scroll; border: 1px #999999 solid;">
+      46, <strong>明石遼介</strong><br>
+      "高圧下水素化物超伝導体の電子状態: 第一原理計算からの理解" <br>
+      日本MRS水素科学技術連携研究会　第11回トピックス研究会〜物理分科会〜　オンライン　2024年1月26日 口頭発表(招待)　 <br>
+      <br>
       45, <strong>明石遼介</strong><br>
       "ほとんど一様な電子系における線状バンド特異点について" <br>
       日本物理学会 第78回年次大会　東北大学川内キャンパス　2023年9月16日--19日 口頭発表(査読なし)　 <br>
@@ -1191,7 +1195,11 @@
     </div>
     <div class="container left">
     <div style="width: 100%; height: 200px; overflow-y: scroll; border: 1px #999999 solid;">
-    
+      2024/01--2025/03
+      <br>
+      <p style="text-indent: 1rem;">  (機構内制度)奨励研究(若手)「密度汎関数理論における非局所効果の研究」
+      </p>
+      <br>
       2023/04--2026/03
       <br>
       <p style="text-indent: 1rem;">  (分担)科研費学術変革領域研究(B)「量子埋め込み理論による物質の有効模型構築(代表者:品岡寛)」
@@ -1236,6 +1244,10 @@
       </div>
       <div class="container left">
       <div style="width: 100%; height: 200px; overflow-y: scroll; border: 1px #999999 solid;">
+        2024/01--   <br>
+        <p style="text-indent: 1rem;">  Organizing committee member, DFT2024 
+        </p>
+        <br>
         2023/12--   <br>
         <p style="text-indent: 1rem;">  External editor, Communications Physics 
         </p>
@@ -1243,6 +1255,15 @@
         2023/10   <br>
         <p style="text-indent: 1rem;">  Organizing committee member, HISML2023 
         </p>
+        <br>
+        2021/10--2022/09   <br>
+        <p style="text-indent: 1rem;">  日本物理学会 領域7 運営委員 
+        </p>
+        <br>
+        2018/04--2019/03   <br>
+        <p style="text-indent: 1rem;">  日本物理学会 領域11 運営委員 
+        </p>
+        <br>
         <br>
       </div>
       </div>
