--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <li><a href="#5">CV</a></li>
             <li><a href="#6">Classes</a></li>
             <li><a href="#7">Grants</a></li>
-            <li><a href="#8">Professional services</a></li>
+            <li><a href="#8">Synergistic activities</a></li>
             <li><a href="#9">Misc</a></li>
          </ul>
              </div>
