--- a/index.html
+++ b/index.html
@@ -489,6 +489,12 @@
   </div>
   <div class="container left">
     <div style="width: 100%; height: 200px; overflow-y: scroll; border: 1px #999999 solid;">
+      56, <strong>R. Akashi</strong><br>
+      "How the peaked DOS emerges in the H3S superconductor" <br>
+      APS March Meeting 2024  <br>
+      Mar. 3--8, 2024; Minneapolis Convention Center, Minneapolis, Minnesota, USA<br>
+      口頭発表(査読なし)<br>
+      <br>
       55, <strong>R. Akashi</strong><br>
       "Electronic theory of high-Tc hydride superconductor H3S through first-principles calculations" <br>
       International Workshop on Massively Parallel Programming for Quantum Chemistry and Physics (MPQCP 2024)  <br>
