Paper (Watanabe) updated

--- a/index.html
+++ b/index.html
@@ -71,11 +71,13 @@
   <div class="container left">
     <h2>Preprints</h2>
     <div style="width: 100%; height: 200px; overflow-y: scroll; border: 1px #999999 solid;">
-      1, <strong>R. Akashi</strong>,
+      <!--
+      1, S. Lu, <strong>R. Akashi</strong>, M. Kawamura, and S. Tsuneyuki
       <a href="https://arxiv.org/abs/2306.04238">
-        arXiv:2306.04238</a> 
+        arXiv:xxxx.xxxxx</a> 
         <br>
-      2, S. Sakuragi, S. Sasaki, <strong>R. Akashi</strong>, R. Sakagami, K. Kuroda, C. Bareille, T. Hashimoto, T. Nagashima, Y. Kinoshita, Y. Hirata, M. Shimozawa, S. Asai, T. Yajima, S. Doi, N. Tsujimoto, S. Kunisada, R. Noguchi, K. Kurokawa, N. Azuma, K. Hirata, Y. Yamasaki, H. Nakao, T. K. Kim, C. Cacho, T. Masuda, M. Tokunaga, H. Wadati, K. Okazaki, S. Shin, Y. Kamihara, M. Yamashita, and T. Kondo,
+      -->
+      1, S. Sakuragi, S. Sasaki, <strong>R. Akashi</strong>, R. Sakagami, K. Kuroda, C. Bareille, T. Hashimoto, T. Nagashima, Y. Kinoshita, Y. Hirata, M. Shimozawa, S. Asai, T. Yajima, S. Doi, N. Tsujimoto, S. Kunisada, R. Noguchi, K. Kurokawa, N. Azuma, K. Hirata, Y. Yamasaki, H. Nakao, T. K. Kim, C. Cacho, T. Masuda, M. Tokunaga, H. Wadati, K. Okazaki, S. Shin, Y. Kamihara, M. Yamashita, and T. Kondo,
       <a href="https://arxiv.org/abs/2001.07991">
         arXiv:2001.07991</a> 
     </div>
@@ -85,6 +87,20 @@
   <h2>Refereed papers</h2>
 
   <div style="width: 100%; height: 1000px; overflow-y: scroll; border: 1px #999999 solid;">
+    49, S. Watanabe, <strong>R. Akashi</strong>, T. Ishikawa, Y. Tanaka and S. Tsuneyuki
+    <a href="https://pubs.aip.org/aip/jap/article/136/13/133104/3315417/Hydrodynamic-simulation-of-laser-ablation-with">
+      J. Appl. Phys. 136, 133104(2024)</a> 
+      <br>
+    48, <strong>R. Akashi</strong><br>
+    "Illuminating the Bragg intersections as roots of the Dirac nodal lines and high-order van Hove singularities" <br>
+    <a href="https://journals.aps.org/prresearch/abstract/10.1103/PhysRevResearch.6.033012">
+      Phys. Rev. Res. <strong>6</strong>, 033012 (2024)</a> 
+    <details>
+      <summary>Comment</summary>
+      いろんな意味で非常に発展性を感じる結果．(2024/10/07 記)
+    </details>
+    <br>
+
     47, H. Tanaka, A. V. Telegin, Y. P. Sukhorukov, V. A. Golyashov, O. E. Tereshchenko, A. N. Lavrov, T. Matsuda, R. Matsunaga, <strong>R. Akashi</strong>, M. Lippmaa, Y. Arai, S. Ideta, K. Tanaka, T. Kondo, and K. Kuroda<br>
     "Semiconducting electronic structure of the ferromagnetic spinel HgCr2Se4 revealed by soft-x-ray angle-resolved photoemission spectroscopy" <br>
     <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.130.186402">
@@ -489,29 +505,41 @@
   </div>
   <div class="container left">
     <div style="width: 100%; height: 200px; overflow-y: scroll; border: 1px #999999 solid;">
-      56, <strong>R. Akashi</strong><br>
+      58, <strong>R. Akashi</strong><br>
+      "Extended saddle van Hove singularities in the H3S superconductor explained" <br>
+      9th International Conference on Superconductivity and Magnetism (ICSM2024)  <br>
+      Apr. 27--May 4, 2024; Liberty Lykia hotel, Oludeniz-Fethiye, Turkey <br>
+      口頭発表(招待)<br>
+      <br>
+      57, <strong>R. Akashi</strong><br>
       "How the peaked DOS emerges in the H3S superconductor" <br>
       APS March Meeting 2024  <br>
       Mar. 3--8, 2024; Minneapolis Convention Center, Minneapolis, Minnesota, USA<br>
       口頭発表(査読なし)<br>
       <br>
-      55, <strong>R. Akashi</strong><br>
+      56, <strong>R. Akashi</strong><br>
       "Electronic theory of high-Tc hydride superconductor H3S through first-principles calculations" <br>
       International Workshop on Massively Parallel Programming for Quantum Chemistry and Physics (MPQCP 2024)  <br>
       Jan. 9--10, 2024; RIKEN, Saitama, Japan<br>
       口頭発表(招待)<br>
       <br>
-      54, <strong>R. Akashi</strong><br>
+      55, <strong>R. Akashi</strong><br>
       "Bragg intersection: A possible source of correlations in nearly uniform electron systems" <br>
       Computational Approaches to Quantum Many-Body Systems  <br>
       Oct. 19--20, 2023; Sonic City, Saitama, Japan<br>
       口頭発表(招待)<br>
       <br>
-      53, <strong>R. Akashi</strong><br>
+      54, <strong>R. Akashi</strong><br>
       "Phonon mediated superconductors from first principles" <br>
       Hierarchical structures and machine learning 2023 (HISML2023) <br>
       Oct. 2--13, 2023; Institute for Solid State Physics, Kashiwa, Japan<br>
       口頭発表(招待)<br>
+      <br>
+      53, <strong>R. Akashi</strong><br>
+      "Eliashberg theory in the uniform electron gas revisited" <br>
+      34th IUPAP Conference on Computational Physics (CCP2023) <br>
+      Aug. 4--8, 2023; Kobe International Conference Center, Kobe Port Island, Kobe, Japan<br>
+      口頭発表(selected)<br>
       <br>
       52, <strong>R. Akashi</strong><br>
       "Eliashberg theory in the uniform electron gas revisited" <br>
