--- a/index.html
+++ b/index.html
@@ -505,6 +505,12 @@
   </div>
   <div class="container left">
     <div style="width: 100%; height: 200px; overflow-y: scroll; border: 1px #999999 solid;">
+      59, <strong>R. Akashi</strong><br>
+      "Electron-phonon GW0 theory based on the intermediate representation" <br>
+      Current and Future Computational Approaches to Quantum Many-Body Systems 2024 (CompQMB2024) <br>
+      Sep. 24--27, 2024; Institute for Solid State Physics, Kashiwa, Japan <br>
+      ポスター発表(査読なし)<br>
+      <br>
       58, <strong>R. Akashi</strong><br>
       "Extended saddle van Hove singularities in the H3S superconductor explained" <br>
       9th International Conference on Superconductivity and Magnetism (ICSM2024)  <br>
@@ -932,6 +938,14 @@
 
   <div class="container left">
     <div style="width: 100%; height: 200px; overflow-y: scroll; border: 1px #999999 solid;">
+      48, <strong>明石遼介</strong><br>
+      "硫化水素の高圧下超伝導相における電子状態のミニマルモデル" <br>
+      日本物理学会　第79回年次大会　北海道大学　2024年9月16日--19日 口頭発表(査読なし)　 <br>
+      <br>
+      47, <strong>明石遼介</strong><br>
+      "シミュレーションから見えてきた硫化水素高圧相H3Sにおける電子状態の特異性" <br>
+      第10回 大型実験施設とスーパーコンピュータとの連携利用シンポジウム　秋葉原UDX　2024年9月12日 口頭発表(招待)　 <br>
+      <br>
       46, <strong>明石遼介</strong><br>
       "高圧下水素化物超伝導体の電子状態: 第一原理計算からの理解" <br>
       日本MRS水素科学技術連携研究会　第11回トピックス研究会〜物理分科会〜　オンライン　2024年1月26日 口頭発表(招待)　 <br>
