Paper title added

--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
   <h2>Refereed papers</h2>
 
   <div style="width: 100%; height: 1000px; overflow-y: scroll; border: 1px #999999 solid;">
-    49, S. Watanabe, <strong>R. Akashi</strong>, T. Ishikawa, Y. Tanaka and S. Tsuneyuki
+    49, S. Watanabe, <strong>R. Akashi</strong>, T. Ishikawa, Y. Tanaka and S. Tsuneyuki<br>
+    "Hydrodynamic simulation of laser ablation with electronic
+    entropy effects included"<br>
     <a href="https://pubs.aip.org/aip/jap/article/136/13/133104/3315417/Hydrodynamic-simulation-of-laser-ablation-with">
       J. Appl. Phys. 136, 133104(2024)</a> 
       <br>
